Closed Bug 508483 Opened 16 years ago Closed 16 years ago

COWs create too many XPCNativeWrappers

Categories

(Core :: XPConnect, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9.2b1
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: mrbkap, Assigned: mrbkap)

References

Details

(Keywords: verified1.9.2)

Attachments

(1 file)

When deciding what wrapper to create for chrome, I forgot that XPCNativeWrappers refuse to wrap double-wrapped objects. We should detect this in XPC_COW_RewrapForChrome and create a SJOW instead.
Flags: blocking1.9.2?
Attached patch Proposed fixSplinter Review
Attachment #392656 - Flags: superreview?(jst)
Attachment #392656 - Flags: review?(jst)
(This blocks a P1 1.9.2 blocker)
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P1
Whiteboard: [needs review jst[
Whiteboard: [needs review jst[ → [needs review jst]
Attachment #392656 - Flags: superreview?(jst)
Attachment #392656 - Flags: superreview+
Attachment #392656 - Flags: review?(jst)
Attachment #392656 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Mass change: adding fixed1.9.2 keyword (This bug was identified as a mozilla1.9.2 blocker which was fixed before the mozilla-1.9.2 repository was branched (August 13th, 2009) as per this query: http://is.gd/2ydcb - if this bug is not actually fixed on mozilla1.9.2, please remove the keyword. Apologies for the bugspam)
Keywords: fixed1.9.2
Verified fixed based on check-in.
Keywords: verified1.9.2
OS: Linux → All
Hardware: x86 → All
Target Milestone: --- → mozilla1.9.2b1
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: