Bug 508483 - Don't try to create XPCNativeWrappers around a double-wrapped object. r+sr=jst