js/src/xpconnect/src/XPCChromeObjectWrapper.cpp
@@ -256,7 +256,8 @@ XPC_COW_RewrapForChrome(JSContext *cx, JSObject *wrapperObj, jsval *vp)
 
   XPCWrappedNative *wn;
   if (IS_WRAPPER_CLASS(STOBJ_GET_CLASS(obj)) &&
-      (wn = XPCWrappedNative::GetWrappedNativeOfJSObject(cx, obj))) {
+      (wn = XPCWrappedNative::GetWrappedNativeOfJSObject(cx, obj)) &&
+      !nsXPCWrappedJSClass::IsWrappedJS(wn->Native())) {
     // Return an explicit XPCNativeWrapper in case "chrome" code happens to be
     // XBL code cloned into an untrusted context.
     return XPCNativeWrapperCtor(cx, obj, 1, vp, vp);
